test/compile-fail/resolution/conflicts/mod-fn-struct/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:3:7
  |
1 | mod b {}
  |     - previous definition of the name `b` here
3 | struct b {}
  |        ^ `b` redefined here
